# test_hexbot

./: README.md
lidar/ydlidar_v1.3.1/ydlidar-master/launch/: lidar.launch  lidar.rviz
lidar/ydlidar_v1.3.1/ydlidar-master/src/: ydlidar_node.cpp
mpu6050_serial_to_imu/launch/: demo.launch
mpu6050_serial_to_imu/src/: mpu6050_serial_to_imu_node.cpp
vkhexbot_bringup/: CMakeLists.txt  package.xml  vkhexbot_bringup.xml
vkhexbot_bringup/config/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
vkhexbot_bringup/launch/: bringup.launch  cartographer_slam.launch  gmapping_slam.launch  hector_slam.launch  hexbot_nav.launch
vkhexbot_bringup/launch/include/: amcl.launch  calibrate_angular.launch  calibrate_linear.launch  gmapping.launch  hector_mapping.launch  imu.launch  move_base.launch
vkhexbot_bringup/maps/: cartographer_map.sh  cartographer_map_20191113.pgm  cartographer_map_20191113.yaml  gmappimg_map_20191113.pgm  gmappimg_map_20191113.yaml  house20191031.pgm  house20191031.yaml  house20191108.pgm  house20191108.yaml  house20191111.pgm  house20191111.yaml  map.bag.pbstream  map.sh  map_20200602.pgm  map_20200602.yaml  vk_new_map.pgm  vk_new_map.yaml
vkhexbot_bringup/param/ekf/: robot_localization.yaml
vkhexbot_bringup/param/imu/: imu_calib.yaml
vkhexbot_calib/: CMakeLists.txt  package.xml  setup.py
vkhexbot_calib/cfg/: CalibrateAngular.cfg  CalibrateLinear.cfg
vkhexbot_calib/nodes/: calibrate_angular.py  calibrate_linear.py  calibrate_linear_y.py
vkhexbot_description/: CMakeLists.txt  package.xml  slam.rviz  urdf.rviz~
vkhexbot_description/meshes/: coxa_L.stl  coxa_R.stl  femur_L.stl  femur_R.stl  rplidar-G4.STL  tarsus_L.stl  tarsus_R.stl
vkhexbot_description/params/: hexapod.yaml  hexbot.yaml  hexbot_localization.yaml  imu_calib.yaml  serial_joystick.yaml
vkhexbot_description/rviz_prefs/: hexbot_nav.rviz  urdf.rviz
vkhexbot_description/urdf/: hexapod_model.xacro~  hexbot_model.xacro  rplidar.xacro
vkhexbot_msgs/: CMakeLists.txt  package.xml
vkhexbot_msgs/msg/: Battery.msg  Buffer.msg  Buffer.msg~
vkhexbot_serial/: CMakeLists.txt  package.xml  vkhexbot_serial.xml
vkhexbot_serial/include/: hexbotProtocol.h  hexbotProtocolPack.h  vkhexbot_serial.h
vkhexbot_serial/launch/: .lidar.launch.swp  vkhexbot_serial.launch
vkhexbot_serial/src/: hexbotProtocol.cpp  hexbotProtocolPack.cpp  vkhexbot_serial.cpp
vkhexbot_teleop/: CMakeLists.txt  package.xml  vkhexbot_teleop.xml
vkhexbot_teleop/launch/: vkhexbot_teleop_key.launch
vkhexbot_teleop/src/: hexbot_teleop_key.cpp  hexbot_teleop_key2.cpp
vkhexbot_tutorial/: CMakeLists.txt  package.xml
vkhexbot_tutorial/src/: read_lidar_data.cpp  vel_control.cpp
